ref: выделить доп еомпоненты: Input, Form, Popup

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mesto-react",
+  "name": "react-mesto-auth",
   "version": "0.1.0",
-  "homepage": "https://mesto-react.valerkamade.ru/",
+  "homepage": "https://react-mesto-auth.valerkamade.ru/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/cli": "^7.0.0",
     "gh-pages": "^5.0.0"
   }
 }
